fixed proportions and spacings

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    margin: 2% 0;
+    margin: 10vh 0;
 }
 
 /* head section */
@@ -25,7 +25,7 @@ body {
     display: flex;
     justify-content: center;
     gap: 1.5rem;
-    margin-bottom: 15vh;
+    margin-bottom: 25vh;
 }
 
 .bio {
@@ -39,7 +39,7 @@ body {
 
 .doodle {
     display: flex;
-    justify-content: center;
+    margin: 0 20rem;
 }
 
 .doodle-dummy-box {
@@ -53,7 +53,7 @@ body {
     font-size: 12pt;
     font-style: italic;
     text-align: start;
-    margin: 10vh 0;
+    margin: 20vh 20rem 10vh 20rem;
 }
 
 .nido-container {
